--- a/GFXLib/makefile
+++ b/GFXLib/makefile
@@ -1,3 +1,26 @@
+exemple: exemple.o libisentlib.a
+	gcc -Wall exemple.o -o exemple libisentlib.a -lm -lglut -lGL -lX11
+# Sous macOS, commenter la ligne de commande ci-dessus (en mettant un # au debut)
+# et de-commenter la ligne de commande ci-apres :
+#	gcc -Wall exemple.o -o exemple libisentlib.a -lm -framework OpenGL -framework GLUT
+
+exempleTortue: exempleTortue.o libisentlib.a
+	gcc -Wall exempleTortue.o -o exempleTortue libisentlib.a -lm -lglut -lGL -lX11
+# Sous macOS, commenter la ligne de commande ci-dessus (en mettant un # au debut)
+# et de-commenter la ligne de commande ci-apres :
+#	gcc -Wall exempleTortue.o -o exempleTortue libisentlib.a -lm -framework OpenGL -framework GLUT
+
+exemple.o: exemple.c GfxLib.h BmpLib.h ESLib.h
+	gcc -Wall -c exemple.c
+
+exempleTortue.o: exempleTortue.c GfxLib.h BmpLib.h ESLib.h TortueLib.h
+	gcc -Wall -c exempleTortue.c
+
+
+libisentlib.a: BmpLib.o ErreurLib.o ESLib.o GfxLib.o OutilsLib.o SocketLib.o ThreadLib.o TortueLib.o VectorLib.o WavLib.o
+	ar r libisentlib.a BmpLib.o ErreurLib.o ESLib.o GfxLib.o OutilsLib.o SocketLib.o ThreadLib.o TortueLib.o VectorLib.o WavLib.o
+	ranlib libisentlib.a
+
 BmpLib.o: BmpLib.c BmpLib.h OutilsLib.h
 	gcc -Wall -O2 -c BmpLib.c
 
@@ -16,6 +39,25 @@ GfxLib.o: GfxLib.c GfxLib.h ESLib.h
 OutilsLib.o: OutilsLib.c OutilsLib.h
 	gcc -Wall -O2 -c OutilsLib.c
 
+SocketLib.o: SocketLib.c SocketLib.h
+	gcc -Wall -O2 -c SocketLib.c
+
+ThreadLib.o: ThreadLib.c ThreadLib.h
+	gcc -Wall -O2 -c ThreadLib.c
+
+TortueLib.o: TortueLib.c TortueLib.h GfxLib.h
+	gcc -Wall -O2 -c TortueLib.c
+
+# Source specifique CPU x86/x86-64 fourni uniquement pour information
+#VectorLib.o: VectorLib.c VectorLib.h
+#	gcc -Wall -O2 -c VectorLib.c -msse3
+
+WavLib.o: WavLib.c WavLib.h OutilsLib.h
+	gcc -Wall -O2 -c WavLib.c -Wno-unused-result
+# Sous macOS, commenter la ligne de commande ci-dessus (en mettant un # au debut)
+# et de-commenter la ligne de commande ci-apres :
+#	gcc -Wall -O2 -c WavLib.c
+
 zip:
 	zip libisentlib.zip *.[ch] *.bmp *.pdf makefile
 #	tar -cvzf libisentlib.tgz *.[ch] *.bmp *.pdf makefile
@@ -24,5 +66,5 @@ clean:
 	rm -f *~ *.o
 
 deepclean: clean
-	rm -f main mainTortue libisentlib.a
+	rm -f exemple exempleTortue libisentlib.a
 
